infrastructure/monitoring/alertmanager/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager
  namespace: monitoring-system
  labels: &Labels
    k8s-app: alertmanager
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/component: alertmanager
spec:
  serviceName: alertmanager
  replicas: 2
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  selector:
    matchLabels: *Labels
  template:
    metadata:
      labels: *Labels
    spec:
      serviceAccountName: alertmanager-sa
      containers:
        - name: prometheus-alertmanager
          image: prom/alertmanager
          imagePullPolicy: Always
          args:
            - --config.file=/etc/config/alertmanager.yml
            - --storage.path=/data
            - --web.listen-address=:9093
            - --web.route-prefix=/
            - --cluster.listen-address=:6783
            - --cluster.peer=alertmanager-0.alertmanager.monitoring-system.svc.cluster.local:6783
            - --cluster.peer=alertmanager-1.alertmanager.monitoring-system.svc.cluster.local:6783
            - --log.level=debug
          ports:
            - containerPort: 9093
              name: http
            - containerPort: 6783
              name: mesh
            - containerPort: 9104
              name: metrics
          readinessProbe:
            httpGet:
              path: /#/status
              port: 9093
            initialDelaySeconds: 30
            timeoutSeconds: 30
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: alertmanager-data
              mountPath: "/data"
              subPath: ""
          resources:
            limits:
              cpu: 10m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 50Mi
      volumes:
        - name: config-volume
          configMap:
            name: alertmanager-configmap
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8s-app
                operator: In
                values:
                - alertmanager
            topologyKey: "kubernetes.io/hostname"
  volumeClaimTemplates:
  - metadata:
      name: alertmanager-data
    spec:
      storageClassName: longhorn
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring-system
  labels:
    k8s-app: alertmanager
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/component: alertmanager
spec:
  ports:
    - name: http
      port: 9093
      protocol: TCP
      targetPort: 9093
    - name: metrics
      port: 9104
      protocol: TCP
      targetPort: 9104
  selector:
    k8s-app: alertmanager
  type: "ClusterIP"
